<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    tools:context=".livewallpaper.TilesActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    <RelativeLayout
        android:id="@+id/tolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/imBack"
            android:text="Tile Wallpaper"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />


    </RelativeLayout>


    <ScrollView
        android:layout_below="@+id/tolbar"
        android:id="@+id/scrollView"
        style="@android:style/Widget.Material.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_splash"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/motionGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:checkedButton="@+id/straight"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surfaceHolder">

                <RadioButton
                    android:id="@+id/straight"
                    style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/straight"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="232dp" />

                <RadioButton
                    android:id="@+id/eight"
                    style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/eight"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="232dp" />

                <RadioButton
                    android:id="@+id/random"
                    style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/rand"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="232dp" />

            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:id="@+id/surfaceHolder"
                android:layout_width="216dp"
                android:layout_height="384dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.videosdownide.loadbase.vdownload.opengles.GLESPlaneAnimatedSurfaceView
                    android:id="@+id/surfaceView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/buttonSetWallpaper"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/back_tab"
                android:text="@string/set"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parallaxToggle" />

            <SeekBar
                android:id="@+id/animationSpeedSlider"
                style="@android:style/Widget.Material.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:progressTint="#FF707070"
                android:secondaryProgressTint="#FF707070"
                android:thumbTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/animSpeed"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cd_box" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:alpha="20"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/motionGroup">

                <ImageView
                    android:id="@+id/dropdownimage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:alpha="80"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/colordropdown"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/dropdownimage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="128dp"
                    android:layout_marginBottom="0dp"
                    android:alpha="80"
                    android:background="@color/lightTransparent"
                    android:contentDescription="@string/readdropdown"
                    android:scaleType="centerCrop" />

                <Spinner
                    android:id="@+id/colorDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:alpha="20"
                    android:backgroundTint="@android:color/background_light"
                    android:popupBackground="@android:color/background_light"
                    android:spinnerMode="dialog" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/parallaxToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/parallax"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animationSpeedSlider"
                app:switchPadding="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>